--- a/app/src/main/res/layout/activity_vaelg_scenarie.xml
+++ b/app/src/main/res/layout/activity_vaelg_scenarie.xml
@@ -7,55 +7,72 @@
     android:background="@drawable/baggrund"
     tools:context=".activities.VaelgScenarieActivity">
 
-    <TextView
-        android:id="@+id/tvOverskrift"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/vaelg_scenarie_overskrift"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:maxLines="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvVaelgTabletTitel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:maxLines="1"
+            android:text="@string/vaelg_scenarie_overskrift"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/scenarieKnap"
+            style="@android:style/Widget.DeviceDefault.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="4dp"
+            android:background="@drawable/knap_kanter"
+            android:backgroundTintMode="src_atop"
+            android:text="@string/btnFunctionValue"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <View
-        android:id="@+id/linie"
+        android:id="@+id/linie2"
         android:layout_width="0dp"
-        android:layout_height="1dp"
+        android:layout_height="2dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         android:background="#3366cc"
         android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/fragmentScenarieContainer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvOverskrift" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
     <FrameLayout
         android:id="@+id/fragmentScenarieContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linie" />
-
-    <Button
-        android:id="@+id/scenarieKnap"
-        style="@android:style/Widget.DeviceDefault.Button"
-        android:layout_width="88dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/rund_knap"
-        android:backgroundTintMode="src_atop"
-        android:text="@string/vaelg_scenarie_knap_nyt_scenarie"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/linie"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linie" />
+        app:layout_constraintTop_toBottomOf="@+id/linie2" />
 
 </android.support.constraint.ConstraintLayout>
