--- a/app/src/main/res/layout/fragment_vaelg_scenarie_liste.xml
+++ b/app/src/main/res/layout/fragment_vaelg_scenarie_liste.xml
@@ -2,17 +2,17 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/clfvsl"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="@id/clfvsl"
+        app:layout_constraintEnd_toEndOf="@id/clfvsl"
+        app:layout_constraintStart_toStartOf="@id/clfvsl"
+        app:layout_constraintTop_toTopOf="@id/clfvsl" />
 
 </android.support.constraint.ConstraintLayout>
