--- a/app/src/main/res/drawable/knap_kanter.xml
+++ b/app/src/main/res/drawable/knap_kanter.xml
@@ -3,8 +3,13 @@
 
     <solid android:color="#FFFFFF"/>
 
-    <stroke android:width="5dip" android:color="#3366cc" />
+    <stroke android:width="1dip" android:color="#3366cc" />
 
-    <corners android:radius="10dip"/>
+    <corners android:radius="5dip"/>
+
+    <padding android:bottom="4dp"/>
+    <padding android:top="4dp"/>
+    <padding android:right="4dp"/>
+    <padding android:left="4dp"/>
 
 </shape>
