Flyt text ud i strings.xml og fjern irriterende fejl
Signed-off-by: petertbdtu <s175210@student.dtu.dk>

--- a/app/src/main/res/layout/fragment_insufflator.xml
+++ b/app/src/main/res/layout/fragment_insufflator.xml
@@ -224,9 +224,9 @@
                             android:background="@color/colorDisplayBackground"
                             android:paddingStart="@dimen/displayPadding"
                             android:paddingEnd="@dimen/displayPadding"
-                            android:text="00"
+                            android:text="@string/displays00Placeholder"
                             android:textColor="@color/colorDisplayRed"
-                            android:textSize="100dp"
+                            android:textSize="100sp"
                             app:layout_constraintBottom_toTopOf="@+id/trykEnhedTekst"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -239,7 +239,7 @@
                             android:layout_marginTop="4dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="4dp"
-                            android:text="mmHg"
+                            android:text="@string/trykEnhed"
                             app:layout_constraintBottom_toTopOf="@+id/trykMaalDisplay"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/trykDisplay" />
@@ -252,9 +252,9 @@
                             android:background="@color/colorDisplayBackground"
                             android:paddingStart="@dimen/displayPadding"
                             android:paddingEnd="@dimen/displayPadding"
-                            android:text="00"
+                            android:text="@string/displays00Placeholder"
                             android:textColor="@color/colorDisplayGreen"
-                            android:textSize="100dp"
+                            android:textSize="100sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -344,9 +344,9 @@
                             android:background="@color/colorDisplayBackground"
                             android:paddingStart="@dimen/displayPadding"
                             android:paddingEnd="@dimen/displayPadding"
-                            android:text="00"
+                            android:text="@string/displays00Placeholder"
                             android:textColor="@color/colorDisplayRed"
-                            android:textSize="100dp"
+                            android:textSize="100sp"
                             app:layout_constraintBottom_toTopOf="@+id/flowrateEnhedTekst"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -359,7 +359,7 @@
                             android:layout_marginTop="4dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginBottom="4dp"
-                            android:text="L/s"
+                            android:text="@string/flowEnhed"
                             app:layout_constraintBottom_toTopOf="@+id/flowrateMaalDisplay"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/flowrateDisplay" />
@@ -372,7 +372,7 @@
                             android:background="@color/colorDisplayBackground"
                             android:paddingStart="@dimen/displayPadding"
                             android:paddingEnd="@dimen/displayPadding"
-                            android:text="00"
+                            android:text="@string/displays00Placeholder"
                             android:textColor="@color/colorDisplayGreen"
                             android:textSize="100sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -426,10 +426,10 @@
                     android:background="@color/colorDisplayBackground"
                     android:paddingStart="@dimen/displayPadding"
                     android:paddingEnd="@dimen/displayPadding"
-                    android:text="00"
+                    android:text="@string/displays00Placeholder"
                     android:textAlignment="center"
                     android:textColor="@color/colorDisplayRed"
-                    android:textSize="100dp"
+                    android:textSize="100sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/volumenTitel" />
@@ -440,7 +440,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="8dp"
-                    android:text="L"
+                    android:text="@string/volumenEnhed"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/volumenDisplay" />
 
