--- a/app/src/main/res/layout/fragment_insufflator.xml
+++ b/app/src/main/res/layout/fragment_insufflator.xml
@@ -154,16 +154,16 @@
                 android:background="#3366cc"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/clTryk"
-                app:layout_constraintStart_toEndOf="@id/clGasforsyning"
                 app:layout_constraintEnd_toStartOf="@id/clTryk"
+                app:layout_constraintStart_toEndOf="@id/clGasforsyning"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/clTryk"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@+id/insufflator_linie1"
                 app:layout_constraintEnd_toStartOf="@+id/insufflator_linie2"
+                app:layout_constraintStart_toEndOf="@+id/insufflator_linie1"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
@@ -182,11 +182,10 @@
 
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/clTrykIndhold"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/trykTitel">
 
@@ -194,14 +193,11 @@
                         android:id="@+id/trykMeter"
                         android:layout_width="64dp"
                         android:layout_height="0dp"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="4dp"
-                        android:layout_marginBottom="8dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/clTrykDisplays"
                         app:layout_constraintEnd_toStartOf="@+id/clTrykDisplays"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="@+id/clTrykDisplays" />
 
                     <android.support.constraint.ConstraintLayout
                         android:id="@+id/clTrykDisplays"
@@ -281,7 +277,7 @@
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/clFlowrate"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toStartOf="@+id/clVolumen"
                 app:layout_constraintStart_toEndOf="@+id/insufflator_linie2"
@@ -303,7 +299,7 @@
 
                 <android.support.constraint.ConstraintLayout
                     android:id="@+id/clFlowrateIndhold"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     app:layout_constraintEnd_toEndOf="parent"
