--- a/app/src/main/res/layout/activity_vaelg_opgave.xml
+++ b/app/src/main/res/layout/activity_vaelg_opgave.xml
@@ -47,6 +47,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/knap_kanter"
+            android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/clTablet"
             app:layout_constraintStart_toStartOf="parent"
@@ -93,6 +94,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/knap_kanter"
+            android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
