--- a/app/src/main/res/layout/fragment_insufflator.xml
+++ b/app/src/main/res/layout/fragment_insufflator.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorLightGray"
     tools:context=".fragments.InsufflatorFragment">
 
     <android.support.constraint.ConstraintLayout
@@ -31,6 +30,7 @@
                 android:id="@+id/clTube"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:elevation="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/clOvertryk"
@@ -64,6 +64,7 @@
                 android:id="@+id/clOvertryk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:elevation="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/clTube"
                 app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +98,7 @@
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/clCenter"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
@@ -121,7 +122,9 @@
                     android:id="@+id/gasforsyningTitel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="4dp"
                     android:maxLines="1"
                     android:text="@string/gasforsyningTitel"
@@ -135,8 +138,11 @@
                     android:id="@+id/gasforsyningMeter"
                     android:layout_width="64dp"
                     android:layout_height="0dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
+                    android:elevation="4dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -149,8 +155,8 @@
                 android:id="@+id/insufflator_linie1"
                 android:layout_width="2dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:background="#3366cc"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/clTryk"
@@ -170,7 +176,9 @@
                     android:id="@+id/trykTitel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="4dp"
                     android:maxLines="1"
                     android:text="@string/trykTitel"
@@ -193,7 +201,9 @@
                         android:id="@+id/trykMeter"
                         android:layout_width="64dp"
                         android:layout_height="0dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginEnd="4dp"
+                        android:elevation="4dp"
                         app:layout_constraintBottom_toBottomOf="@+id/clTrykDisplays"
                         app:layout_constraintEnd_toStartOf="@+id/clTrykDisplays"
                         app:layout_constraintStart_toStartOf="parent"
@@ -218,6 +228,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
                             android:background="@color/colorDisplayBackground"
+                            android:elevation="4dp"
                             android:paddingStart="@dimen/displayPadding"
                             android:paddingEnd="@dimen/displayPadding"
                             android:text="@string/displays00Placeholder"
@@ -246,6 +257,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
                             android:background="@color/colorDisplayBackground"
+                            android:elevation="4dp"
                             android:paddingStart="@dimen/displayPadding"
                             android:paddingEnd="@dimen/displayPadding"
                             android:text="@string/displays00Placeholder"
@@ -266,8 +278,8 @@
                 android:id="@+id/insufflator_linie2"
                 android:layout_width="2dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:background="#3366cc"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/clFlowrate"
@@ -287,7 +299,9 @@
                     android:id="@+id/flowrateTitel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="4dp"
                     android:maxLines="1"
                     android:text="@string/flowrateTitel"
@@ -314,6 +328,7 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="4dp"
                         android:layout_marginBottom="8dp"
+                        android:elevation="4dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/clFlowrateDisplays"
                         app:layout_constraintStart_toStartOf="parent"
@@ -338,6 +353,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="4dp"
                             android:background="@color/colorDisplayBackground"
+                            android:elevation="4dp"
                             android:paddingStart="@dimen/displayPadding"
                             android:paddingEnd="@dimen/displayPadding"
                             android:text="@string/displays00Placeholder"
@@ -366,6 +382,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
                             android:background="@color/colorDisplayBackground"
+                            android:elevation="4dp"
                             android:paddingStart="@dimen/displayPadding"
                             android:paddingEnd="@dimen/displayPadding"
                             android:text="@string/displays00Placeholder"
@@ -385,8 +402,8 @@
                 android:id="@+id/insufflator_linie3"
                 android:layout_width="2dp"
                 android:layout_height="0dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:background="#3366cc"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/clFlowrate"
@@ -406,7 +423,9 @@
                     android:id="@+id/volumenTitel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
                     android:maxLines="1"
                     android:text="@string/volumenTitel"
                     android:textSize="30sp"
@@ -418,8 +437,11 @@
                     android:id="@+id/volumenDisplay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="12dp"
+                    android:layout_marginEnd="8dp"
                     android:background="@color/colorDisplayBackground"
+                    android:elevation="4dp"
                     android:paddingStart="@dimen/displayPadding"
                     android:paddingEnd="@dimen/displayPadding"
                     android:text="@string/displays00Placeholder"
@@ -434,7 +456,7 @@
                     android:id="@+id/volumenEnhedTekst"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="@string/volumenEnhed"
                     app:layout_constraintEnd_toEndOf="parent"
