--- a/app/src/main/res/layout/activity_vaelg_tablet.xml
+++ b/app/src/main/res/layout/activity_vaelg_tablet.xml
@@ -16,7 +16,7 @@
 
         <TextView
             android:id="@+id/tvVaelgTabletTitel"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -26,6 +26,7 @@
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btnFunction2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,17 +35,20 @@
             style="@android:style/Widget.DeviceDefault.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
             android:background="@drawable/knap_kanter"
             android:backgroundTintMode="src_atop"
+            android:elevation="4dp"
             android:text="@string/btnFunctionValue"
             android:textSize="14sp"
             android:textStyle="bold"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btnFunction2"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
@@ -57,10 +61,12 @@
             android:layout_marginBottom="4dp"
             android:background="@drawable/knap_kanter"
             android:backgroundTintMode="src_atop"
+            android:elevation="4dp"
             android:text="@string/VaelgTablet_SendTilAlle"
             android:textSize="14sp"
             android:textStyle="bold"
             android:visibility="visible"
+            app:layout_constraintStart_toEndOf="@id/tvVaelgTabletTitel"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnFunction"
             app:layout_constraintTop_toTopOf="parent"
